--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
-﻿asgiref==3.3.4
-beautifulsoup4==4.9.3
-dj-database-url==0.5.0
-Django==3.2
-django-bootstrap4==3.0.0
-django-crispy-forms==1.11.2
-django-heroku==0.3.1
-gunicorn==20.1.0
-importlib-metadata==2.1.1
-Pillow==8.2.0
-psycopg2==2.7.7
-psycopg2-binary==2.8.5
-pytz==2021.1
-soupsieve==2.2.1
-sqlparse==0.4.1
-typing-extensions==3.7.4.3
-whitenoise==5.2.0
-zipp==3.4.1
+﻿asgiref
+beautifulsoup4
+dj-database-url
+Django
+django-bootstrap4
+django-crispy-forms
+gunicorn
+# importlib-metadata  # Standard in Python 3.8+
+Pillow
+psycopg2-binary
+pytz
+soupsieve
+sqlparse
+typing-extensions
+whitenoise
+zipp
